--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "bfhl-api",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
   "dependencies": {
     "express": "^5.2.1"
   }
