--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "main": "server.js",
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
+    "dotenv": "^16.6.1",
     "express": "^5.2.1"
   }
 }
