--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "main": "server.js",
   "dependencies": {
-    "@google/generative-ai": "^0.1.3",
+    "@google/generative-ai": "^0.24.1",
     "dotenv": "^16.6.1",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "openai": "^6.19.0"
   }
 }
